# otus-cpp-basics

./: .gitignore  README.md
containers/: CMakeLists.txt  main.cpp  main_test.cpp  myarray.h  myarray_test.h  mylist.h  mylist_test.h  myvec.h
guess_the_number/: CMakeLists.txt  getmaxvalue.cpp  getmaxvalue.h  main.cpp  readwrite.cpp  readwrite.h
lesson_1/: example.cpp  hello_world.cpp  readwrite.cpp  readwrite.h
multithread/multithread/: CMakeLists.txt  main.cpp
physical_simulator/: Ball.cpp  Ball.hpp  Color.h  Physics.cpp  World.cpp  World.h
statistics/: CMakeLists.txt  main.cpp  max.cpp  max.h  mean.cpp  mean.h  min.cpp  min.h  std.cpp  std.h
